--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+html,
 body {
   margin: 0;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -15,17 +16,20 @@ header {
 main {
   flex: 1;
   display: flex;
+  overflow: hidden;
 }
 
 #graph {
   flex: 1;
   border-right: 1px solid #ccc;
+  height: 100%;
 }
 
 #editor {
   width: 300px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 #editor h2 {
