--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,10 @@ main {
   max-height: 4em;
   overflow: auto;
 }
+
+#version {
+  margin-left: auto;
+  align-self: center;
+  font-size: 0.8rem;
+  opacity: 0.7;
+}
