--- a/src/index.css
+++ b/src/index.css
@@ -45,10 +45,21 @@ main {
   border-bottom: 1px solid #374151;
 }
 
+#title {
+  background: #0d1117;
+  color: #f9fafb;
+  border: none;
+  border-bottom: 1px solid #374151;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
 #text {
   flex: 1;
   width: 100%;
   border: none;
+  background: #0d1117;
+  color: #f9fafb;
 }
 
 #modal {
