feat: add close button style for playthrough

--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,11 @@ main {
   display: flex;
 }
 
+#closePlay {
+  align-self: flex-end;
+  margin: 0.5rem;
+}
+
 #playthrough .play-text {
   flex: 1;
   overflow-y: auto;
