Move settings button to header and use icons

--- a/src/index.css
+++ b/src/index.css
@@ -281,11 +281,9 @@ main {
   opacity: 0.5;
 }
 
-#version {
+#settingsButton {
   margin-left: auto;
   align-self: center;
-  font-size: 0.8rem;
-  color: var(--text-dim);
 }
 
 /* React Flow UI elements */
