--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   background: var(--bg);
   color: var(--text);
   font-family: Inter, sans-serif;
-  font-size: 14px;
+  font-size: var(--font-size);
 }
 #root {
   display: flex;
@@ -206,7 +206,7 @@ main {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #121212;
+  background: var(--modal-bg);
   color: #f0f0f0;
   display: none;
   flex-direction: column;
@@ -227,12 +227,16 @@ main {
   padding: 1rem;
   max-width: 800px;
   margin: auto;
+  background: var(--panel);
+  border-radius: var(--radius);
+  border: 1px solid var(--panel);
   line-height: 1.6;
   font-family: system-ui, sans-serif;
   user-select: text;
 }
 #modalList a {
-  color: #70b8ff;
+  color: inherit;
+  text-decoration: underline;
 }
 #modalList a:hover {
   text-decoration: underline;
@@ -449,18 +453,24 @@ main {
 
 #linearEditor h3 {
   font-size: 20px;
-  margin: 2.5rem 0 .25rem;
+  margin: 1rem 0 .25rem;
 }
 
 #linearEditor p {
   margin: .25rem 0;
+  line-height: 1.4;
 }
 
 .node-link {
-  color: #2fa8ff;
-  text-decoration: none;
+  color: inherit;
+  text-decoration: underline;
 }
 
 .node-link:hover {
   text-decoration: underline;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
 }
