Fix Linear View interactions

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ header {
   filter: brightness(1.1);
 }
 
-main {
+#root > main {
   flex: 1;
   display: grid;
   grid-template-columns: 1fr auto;
